--- a/ourWebapp/src/main/webapp/index.html
+++ b/ourWebapp/src/main/webapp/index.html
@@ -1,12 +1,16 @@
 <!DOCTYPE html>
 <html>
-<head>
-	<script type="text/javascript" src="js/lib/jquery-2.1.0.min.js"></script>
-	<script type="text/javascript" src="js/lib/d3.js"></script>
-	<script type="text/javascript" src="js/lib/dc.js"></script>
-	<script type="text/javascript" src="js/lib/crossfilter.js"></script>
-</head>
-<body>
-<h2>Hello World!</h2>
-</body>
+	<head>
+		 <link rel="stylesheet" type="text/css" href="bootstrap.min.css">
+	</head>
+	<body>
+		<h2>Hello World!</h2>
+
+		<script type="text/javascript" src="js/lib/jquery-2.1.0.min.js"></script>
+		<script type="text/javascript" src="js/lib/d3.js"></script>
+		<script type="text/javascript" src="js/lib/dc.js"></script>
+		<script type="text/javascript" src="js/lib/crossfilter.js"></script>
+		<script type="text/javascript" src="js/menu.js"></script>
+		<script type="text/javascript" src="js/charts.js"></script>
+	</body>
 </html>
