--- a/ourWebapp/src/main/webapp/html/events.html
+++ b/ourWebapp/src/main/webapp/html/events.html
@@ -1,10 +1,21 @@
 <!DOCTYPE html>
-<html>
-	<head>
-		<meta charset="UTF-8">
-	</head>
+<meta charset="utf-8">
+<head> 
+	<link rel="stylesheet" type="text/css" href="../css/events.css"> 
 	
-	<body>
-		Evenimentele merg aici
-	</body>
-</html>
+</head>
+<body>
+<div class="main">
+	<div id="start">
+	<div id="carousel" class="center">
+	    <ul>
+	    </ul>
+	    <div class="clearfix"></div>
+	    
+	</div>	
+	
+</div>		
+		
+	<script type="text/javascript" src="../js/lib/jquery-2.1.0.min.js"></script>
+	<script type="text/javascript" src="../js/events.js"></script>
+</body>
