--- a/ourWebapp/src/main/webapp/openstreetmap.html
+++ b/ourWebapp/src/main/webapp/openstreetmap.html
@@ -7,24 +7,54 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 	<link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet-0.7.2/leaflet.css" />
+	<link rel="stylesheet" href="fonts/stylesheet.css" />
 	<style>
 		html, body { height: 100%; margin: 0;}
-		#dates {
+		#map {
+			z-index: 1;
+		}
+		#header {
+			width: 100%;
+			height: 10%;
+			display: table;
 			box-sizing: border-box;
 			position:relative;
+			z-index: 2;
 			border-top: 1px solid #ccc;
+			-webkit-box-shadow: 0px 1px 4px 0px rgba(50, 50, 50, 0.75);
+			-moz-box-shadow:    0px 1px 4px 0px rgba(50, 50, 50, 0.75);
+			box-shadow:         0px 1px 4px 0px rgba(50, 50, 50, 0.75);
+		}
+		#footer {
+			box-sizing: border-box;
+			position:relative;
+			width: 100%;
+			height: 10%;
+			z-index: 2;
 			-webkit-box-shadow: 0px -1px 4px 0px rgba(50, 50, 50, 0.75);
 			-moz-box-shadow:    0px -1px 4px 0px rgba(50, 50, 50, 0.75);
 			box-shadow:         0px -1px 4px 0px rgba(50, 50, 50, 0.75);
 		}
 		.leaflet-bottom.leaflet-right {
-			margin-bottom: 18px;
+			margin-bottom: 5px;
+		}
+		#header h1 {
+			font-family: 'ostrich', verdana, arial;
+			font-size: 32pt;
+			display: table-cell;
+			text-align: center;
+			vertical-align:middle;
+			width: 300px;
+			margin: 0 auto;
 		}
 	</style>
 </head>
 <body>
-	<div id="map" style="width: 100%; height: 90%;"></div>
-	<div id="dates" style="width: 100%; height: 10%;"></div>
+	<div id="header">
+		<h1>Cluj - Broken Streets</h1>
+	</div>
+	<div id="map" style="width: 100%; height: 80%;"></div>
+	<div id="footer"></div>
 
 	<script src="http://cdn.leafletjs.com/leaflet-0.7.2/leaflet.js"></script>
 	<script src="http://code.jquery.com/jquery-1.11.0.min.js"></script>
