Updated chart groups, minor CSS changes.

--- a/ourWebapp/src/main/webapp/index.html
+++ b/ourWebapp/src/main/webapp/index.html
@@ -13,12 +13,12 @@
 			<div id="harta"></div>
 			<div class="span4">
 				<div id="generic-time-chart" class="chart">
-					<strong>Evolutia investitiilor la nivel de tara</strong>
+					<strong>Evolutia numarului de proiecte</strong>
 					<div class="clearfix"></div>
 				</div>
 
 				<div id="subcase-time-chart" class="chart">
-					<strong>Investitiile depasind media la nivel de tara</strong>
+					<strong>Suma totala a investiilor</strong>
 					<div class="clearfix"></div>
 				</div>
 			</div>
@@ -30,8 +30,7 @@
 		<script type="text/javascript" src="js/lib/crossfilter.js"></script>
 		<script type="text/javascript" src="js/lib/raphael.min.js"></script>
 		<script type="text/javascript" src="js/menu.js"></script>
-		<script type="text/javascript" src="js/data.js"></script>
+		<script type="text/javascript" src="js/map.js"></script>
 		<script type="text/javascript" src="js/charts.js"></script>
-		<script type="text/javascript" src="js/romaniaMap.js"></script>
 	</body>
 </html>
