--- a/ourWebapp/src/main/webapp/brokenstreets.html
+++ b/ourWebapp/src/main/webapp/brokenstreets.html
@@ -105,6 +105,6 @@
 	<script src="js/lib/dc.js"></script>
 	<script src="js/lib/date.js"></script>
 	<script src="js/lib/kizzy.js"></script>
-	<script src="js/openstreetmap.js"></script>
+	<script src="js/brokenstreets.js"></script>
 </body>
 </html>
