Show only streets under construction on the selected day (limit the chart to the last 200 days)

--- a/ourWebapp/src/main/webapp/brokenstreets.html
+++ b/ourWebapp/src/main/webapp/brokenstreets.html
@@ -93,7 +93,7 @@
 			<h3 id="total">0</h3>
 			broken streets<br>
 			in <span id="months">0</span> months<br>
-			<a href="#">Play All</a>
+			<!-- <a href="#">Play All</a> -->
 		</div>
 		<div id="chart"></div>
 	</div>
