--- a/ourWebapp/src/main/webapp/index.html
+++ b/ourWebapp/src/main/webapp/index.html
@@ -38,6 +38,7 @@
 						<strong>Suma totala a investiilor</strong>
 						<div class="clearfix"></div>
 					</div>
+			<div id="harta_cluj" style="height:600px; width: 600px; display: none;"></div>
 			</section>
 		</section>
 		
@@ -82,6 +83,7 @@
 		<script type="text/javascript" src="js/lib/raphael.min.js"></script>
 		<script type="text/javascript" src="js/menu.js"></script>
 		<script type="text/javascript" src="js/map.js"></script>
+		<script type="text/javascript" src="js/clujMap.js"></script>
 		<script type="text/javascript" src="js/charts.js"></script>
 	</body>
 </html>
