fixed pb with ids

--- a/ourWebapp/src/main/webapp/index.html
+++ b/ourWebapp/src/main/webapp/index.html
@@ -29,16 +29,16 @@
 		<section id="body">
 			<section id="charts" class="clearfix">
 				<div id="bubble-map"></div>
-					<div id="generic-time-chart" class="chart span4">
-						<strong>Evolutia numarului de proiecte</strong>
-						<div class="clearfix"></div>
-					</div>
-	
-					<div id="subcase-time-chart" class="chart span4">
-						<strong>Suma totala a investiilor</strong>
-						<div class="clearfix"></div>
-					</div>
-			<div id="harta_cluj" style="height:600px; width: 600px; display: none;"></div>
+				<div id="generic-time-chart" class="chart span4">
+					<strong>Evolutia numarului de proiecte</strong>
+					<div class="clearfix"></div>
+				</div>
+
+				<div id="subcase-time-chart" class="chart span4">
+					<strong>Suma totala a investiilor</strong>
+					<div class="clearfix"></div>
+				</div>
+				<div id="mapCluj" style="height:600px; width: 600px; display: none;"></div>
 			</section>
 		</section>
 		
