--- a/ourWebapp/src/main/webapp/index.html
+++ b/ourWebapp/src/main/webapp/index.html
@@ -43,37 +43,31 @@
 		</section>
 		
 		<footer class="clearfix">
-			<ul>
-				<li>All features Taxonomised</li>
-				<li>Summary of features</li>
-				<li>Content type as list headers and children of type in list</li>
-				<li>List with what the user can  do for each type of interest</li>
-				<li>(Administrative, Inverstments, Social Info., Cultural)</li>
-			</ul>
-			<ul class="pull-left">
-				<li>Category Title</li>
-				<li>Child item lore ipsum</li>
-				<li>Child item Lore</li>
-				<li>Child item ipsum</li>
-				<li>Child item name</li>
-				<li>Child item</li>
-			</ul>
-			<ul class="pull-left">
-				<li>Category Title</li>
-				<li>Child item lore ipsum</li>
-				<li>Child item Lore</li>
-				<li>Child item ipsum</li>
-				<li>Child item name</li>
-				<li>Child item</li>
-			</ul>
-			<ul class="pull-left">
-				<li>Category Title</li>
-				<li>Child item lore ipsum</li>
-				<li>Child item Lore</li>
-				<li>Child item ipsum</li>
-				<li>Child item name</li>
-				<li>Child item</li>
-			</ul>
+			<div>
+				<ul class="pull-left">
+					<li>All features Taxonomised</li>
+					<li>Summary of features</li>
+					<li>Content type as list headers and children of type in list</li>
+					<li>List with what the user can  do for each type of interest</li>
+					<li>(Administrative, Inverstments, Social Info., Cultural)</li>
+				</ul>
+				<ul class="pull-left">
+					<li>Category Title</li>
+					<li>Child item lore ipsum</li>
+					<li>Child item Lore</li>
+					<li>Child item ipsum</li>
+					<li>Child item name</li>
+					<li>Child item</li>
+				</ul>
+				<ul class="pull-left">
+					<li>Category Title</li>
+					<li>Child item lore ipsum</li>
+					<li>Child item Lore</li>
+					<li>Child item ipsum</li>
+					<li>Child item name</li>
+					<li>Child item</li>
+				</ul>
+			</div>
 		</footer>
 
 		<script type="text/javascript" src="js/lib/jquery-2.1.0.min.js"></script>
