added reset button

--- a/ourWebapp/src/main/webapp/index.html
+++ b/ourWebapp/src/main/webapp/index.html
@@ -38,6 +38,10 @@
 					<strong>Suma totala a investiilor</strong>
 					<div class="clearfix"></div>
 				</div>
+				<div class="clearfix reset">
+					<label for="resetLink">Reset the charts: </label>
+					<a id="resetLink" class="reset">reset</a>
+				</div>
 				<div id="mapCluj" style="height:600px; width: 600px; display: none;"></div>
 			</section>
 		</section>
