Add support for playback of broken streets

--- a/ourWebapp/src/main/webapp/brokenstreets.html
+++ b/ourWebapp/src/main/webapp/brokenstreets.html
@@ -81,6 +81,10 @@
 			margin-top: 4px;
 			display: inline-block;
 		}
+		
+		#summary a.stop {
+			display: none;
+		}
 	</style>
 </head>
 <body>
@@ -93,7 +97,8 @@
 			<h3 id="total">0</h3>
 			broken streets<br>
 			in <span id="months">0</span> months<br>
-			<!-- <a href="#">Play All</a> -->
+			<a href="#" class="play">Play All</a>
+			<a href="#" class="stop">STOP</a>
 		</div>
 		<div id="chart"></div>
 	</div>
