--- a/ourWebapp/src/main/webapp/brokenstreets.html
+++ b/ourWebapp/src/main/webapp/brokenstreets.html
@@ -48,6 +48,9 @@
 			width: 300px;
 			margin: 0 auto;
 		}
+		#header h1 span {
+			color: #ff6200;
+		}
 		#summary {
 			display:table-cell;
 			vertical-align: middle;
@@ -89,7 +92,7 @@
 </head>
 <body>
 	<div id="header">
-		<h1>Cluj - Broken Streets</h1>
+		<h1>Cluj - <span>Broken</span> Streets</h1>
 	</div>
 	<div id="map" style="width: 100%; height: 75%;"></div>
 	<div id="footer">
