--- a/ourWebapp/src/main/webapp/brokenstreets.html
+++ b/ourWebapp/src/main/webapp/brokenstreets.html
@@ -5,6 +5,8 @@
 	<meta charset="utf-8" />
 
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	
+	<link rel="shortcut icon" href="brokenstreets.ico" />
 
 	<link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet-0.7.2/leaflet.css" />
 	<link rel="stylesheet" href="fonts/stylesheet.css" />
