--- a/ourWebapp/src/main/webapp/index.html
+++ b/ourWebapp/src/main/webapp/index.html
@@ -13,6 +13,7 @@
 	
 	<body>
 		<header>
+			<div class="page-title">View Statistics</div>
 			<a class="back-arrow pull-left"></a>
 			
 			<a class="bubble-link pull-right">
