Minor styling changes.

--- a/ourWebapp/src/main/webapp/index.html
+++ b/ourWebapp/src/main/webapp/index.html
@@ -29,12 +29,15 @@
 		
 		<section id="body">
 			<section id="charts" class="clearfix">
-				<div id="bubble-map"></div>
+				<div class="wrapper pull-left">
+					<div id="bubble-map"></div>
+					<div id="mapCluj" style="height:560px; width: 520px; display: none;"></div>
+				</div>
+
 				<div id="generic-time-chart" class="chart span4">
 					<strong>Evolutia numarului de proiecte</strong>
 					<div class="clearfix"></div>
 				</div>
-
 				<div id="subcase-time-chart" class="chart span4">
 					<strong>Suma totala a investiilor</strong>
 					<div class="clearfix"></div>
@@ -43,7 +46,6 @@
 					<label for="resetLink">Reset the charts: </label>
 					<a id="resetLink" class="reset">reset</a>
 				</div>
-				<div id="mapCluj" style="height:600px; width: 600px; display: none;"></div>
 			</section>
 		</section>
 		
