--- a/ourWebapp/src/main/webapp/index.html
+++ b/ourWebapp/src/main/webapp/index.html
@@ -13,7 +13,8 @@
 	
 	<body>
 		<header>
-			<div class="page-title">View Statistics</div>
+			<a class="back" onclick="history.go(-1);return true;">Back</a>
+			<div class="page-title">STATISTICI ZONALE</div>
 			<a class="back-arrow pull-left"></a>
 			
 			<a class="bubble-link pull-right">
@@ -59,20 +60,20 @@
 					<li>(Administrative, Inverstments, Social Info., Cultural)</li>
 				</ul>
 				<ul class="pull-left">
-					<li>Category Title</li>
-					<li>Child item lore ipsum</li>
-					<li>Child item Lore</li>
-					<li>Child item ipsum</li>
-					<li>Child item name</li>
-					<li>Child item</li>
+					<li style="font-weight: bold;">JUDETE ROAMNIA</li>
+					<li><a href="http://ro.wikipedia.org/wiki/Judetul_Cluj" style="color: white;">Judetul Cluj</a></li>
+					<li><a href="http://ro.wikipedia.org/wiki/Judetul_Alba" style="color: white;">Judetul Alba</a></li>
+					<li><a href="http://ro.wikipedia.org/wiki/Judetul_Mures" style="color: white;">Judetul Mures</a></li>
+					<li><a href="http://ro.wikipedia.org/wiki/Judetul_Brasov" style="color: white;">Judetul Brasov</a></li>
+					<li><a href="http://ro.wikipedia.org/wiki/Judetul_Sibiu" style="color: white;">Judetul Sibiu</a></li>
 				</ul>
 				<ul class="pull-left">
-					<li>Category Title</li>
-					<li>Child item lore ipsum</li>
-					<li>Child item Lore</li>
-					<li>Child item ipsum</li>
-					<li>Child item name</li>
-					<li>Child item</li>
+					<li style="font-weight: bold;">JUDETE ROAMNIA</li>
+					<li><a href="http://ro.wikipedia.org/wiki/Judetul_Bacau" style="color: white;">Judetul Bacau</a></li>
+					<li><a href="http://ro.wikipedia.org/wiki/Judetul_Olt" style="color: white;">Judetul Olt</a></li>
+					<li><a href="http://ro.wikipedia.org/wiki/Judetul_Constanta" style="color: white;">Judetul Constanta</a></li>
+					<li><a href="http://ro.wikipedia.org/wiki/Judetul_Teleorman" style="color: white;">Judetul Teleorman</a></li>
+					<li><a href="http://ro.wikipedia.org/wiki/Judetul_Vaslui" style="color: white;">Judetul Vaslui</a></li>
 				</ul>
 			</div>
 		</footer>
