just changed the title

--- a/ourWebapp/src/main/webapp/index.html
+++ b/ourWebapp/src/main/webapp/index.html
@@ -14,7 +14,7 @@
 	<body>
 		<header>
 			<a class="back" onclick="history.go(-1);return true;">Back</a>
-			<div class="page-title">STATISTICI ZONALE</div>
+			<div class="page-title">STATISTICI REGIONALE</div>
 			<a class="back-arrow pull-left"></a>
 			
 			<a class="bubble-link pull-right">
