--- a/ourWebapp/src/main/webapp/html/brokenstreets.html
+++ b/ourWebapp/src/main/webapp/html/brokenstreets.html
@@ -6,10 +6,10 @@
 
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	
-	<link rel="shortcut icon" href="brokenstreets.ico" />
+	<link rel="shortcut icon" href="../brokenstreets.ico" />
 
 	<link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet-0.7.2/leaflet.css" />
-	<link rel="stylesheet" href="fonts/stylesheet.css" />
+	<link rel="stylesheet" href="../fonts/stylesheet.css" />
 	<style>
 		html, body { height: 100%; margin: 0;}
 		#map {
@@ -109,12 +109,12 @@
 	</div>
 
 	<script src="http://cdn.leafletjs.com/leaflet-0.7.2/leaflet.js"></script>
-	<script src="js/lib/jquery-2.1.0.min.js"></script>
+	<script src="../js/lib/jquery-2.1.0.min.js"></script>
 	<script src="http://code.highcharts.com/highcharts.js"></script>
-	<script src="js/lib/d3.js"></script>
-	<script src="js/lib/dc.js"></script>
-	<script src="js/lib/date.js"></script>
-	<script src="js/lib/kizzy.js"></script>
-	<script src="js/brokenstreets.js"></script>
+	<script src="../js/lib/d3.js"></script>
+	<script src="../js/lib/dc.js"></script>
+	<script src="../js/lib/date.js"></script>
+	<script src="../js/lib/kizzy.js"></script>
+	<script src="../js/brokenstreets.js"></script>
 </body>
 </html>
