--- a/ourWebapp/src/main/webapp/html/index.html
+++ b/ourWebapp/src/main/webapp/html/index.html
@@ -5,10 +5,10 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <title></title>
 
-		<link rel="stylesheet" type="text/css" href="css/lib/bootstrap.min.css">
-		<link rel="stylesheet" type="text/css" href="css/lib/normalize.css">
-		<link rel="stylesheet" type="text/css" href="css/lib/dc.css">
-		<link rel="stylesheet" type="text/css" href="css/main.css">
+		<link rel="stylesheet" type="text/css" href="../css/lib/bootstrap.min.css">
+		<link rel="stylesheet" type="text/css" href="../css/lib/normalize.css">
+		<link rel="stylesheet" type="text/css" href="../css/lib/dc.css">
+		<link rel="stylesheet" type="text/css" href="../css/main.css">
 	</head>
 	
 	<body>
@@ -77,14 +77,14 @@
 			</div>
 		</footer>
 
-		<script type="text/javascript" src="js/lib/jquery-2.1.0.min.js"></script>
-		<script type="text/javascript" src="js/lib/d3.js"></script>
-		<script type="text/javascript" src="js/lib/dc.js"></script>
-		<script type="text/javascript" src="js/lib/crossfilter.js"></script>
-		<script type="text/javascript" src="js/lib/raphael.min.js"></script>
-		<script type="text/javascript" src="js/menu.js"></script>
-		<script type="text/javascript" src="js/map.js"></script>
-		<script type="text/javascript" src="js/clujMap.js"></script>
-		<script type="text/javascript" src="js/charts.js"></script>
+		<script type="text/javascript" src="../js/lib/jquery-2.1.0.min.js"></script>
+		<script type="text/javascript" src="../js/lib/d3.js"></script>
+		<script type="text/javascript" src="../js/lib/dc.js"></script>
+		<script type="text/javascript" src="../js/lib/crossfilter.js"></script>
+		<script type="text/javascript" src="../js/lib/raphael.min.js"></script>
+		<script type="text/javascript" src="../js/menu.js"></script>
+		<script type="text/javascript" src="../js/map.js"></script>
+		<script type="text/javascript" src="../js/clujMap.js"></script>
+		<script type="text/javascript" src="../js/charts.js"></script>
 	</body>
 </html>
