--- a/ourWebapp/src/main/webapp/html/index.html
+++ b/ourWebapp/src/main/webapp/html/index.html
@@ -33,7 +33,7 @@
 				<div class="wrapper pull-left">
 					<div id="bubble-map"></div>
 					<div id="mapCluj" style="height:560px; width: 520px; display: none;"></div>
-					<div id="mapClujOverlay"><svg style="position: absolute; overflow: visible; top: 10px;"></svg></div>
+					<div id="mapClujOverlay" style="height:560px; width: 520px; display: none;"><svg style="position: absolute; overflow: visible; top: 10px;"></svg></div>
 				</div>
 
 				<div id="generic-time-chart" class="chart span4">
