--- a/ourWebapp/src/main/webapp/html/home.html
+++ b/ourWebapp/src/main/webapp/html/home.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html style="height:100%;">
 	<head>
 		<meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -11,7 +11,7 @@
 		<link rel="stylesheet" type="text/css" href="../css/home.css">
 	</head>
 	
-	<body>
+	<body style="height:100%; position: relative;">
 		<header>
 			<div class="page-title">View Statistics</div>
 			<a class="back-arrow pull-left"></a>
