--- a/ourWebapp/src/main/webapp/html/index.html
+++ b/ourWebapp/src/main/webapp/html/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html>
+<html style="height:100%;">
 	<head>
 		<meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title></title>
+        <title>Fonduri europene</title>
 
 		<link rel="stylesheet" type="text/css" href="../css/lib/bootstrap.min.css">
 		<link rel="stylesheet" type="text/css" href="../css/lib/normalize.css">
@@ -11,7 +11,7 @@
 		<link rel="stylesheet" type="text/css" href="../css/main.css">
 	</head>
 	
-	<body>
+  <body style="height:100%; position: relative;">
 		<header>
 			<a class="back" onclick="history.go(-1);return true;">Back</a>
 			<div class="page-title">STATISTICI REGIONALE</div>
